--- a/estilo.css
+++ b/estilo.css
@@ -75,22 +75,21 @@ img {
 .titleNombre {
     text-align: center;
     font-family: 'Anton', sans-serif;
-    font-size: 25px;
+    font-size: 30px;
 }
 .nombre {
     text-align: center;
     font-family: 'Anton', sans-serif;
-    font-size: 22px;
+    font-size: 25px;
 }
 .buscar {
     display: block;
     margin: auto;
-    border-radius: 8px;
+    border-radius: 10px;
     outline: none;
     font-size: 15px;
-   
-
- 
+    width: 250px;
+    height: 20px;
 }
 
 .btn {
@@ -100,10 +99,11 @@ img {
     outline: none;
     margin-top: 10px;
     border-radius: 8px;
-    font-size: 15px;
+    font-size: 18px;
     background-color: red;
     border: none;
     width: 100px;
     font-family: 'Anton', sans-serif;
     color: white;
+    height: 30px;
 }
